--- a/MyApplication/app/src/main/res/layout/activity_dashboard.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dashboard.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
+    tools:context=".DashboardActivity"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".MainActivity">
+    android:id="@+id/drawer_spercamerge">
 
     <LinearLayout
         android:id="@+id/layoutlinear"
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:id="@+id/toolbar"
-            android:background="@color/black"
+            android:background="@color/lavander"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
@@ -27,10 +27,9 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container_main_drawer"/>
+            android:id="@+id/fragment_container_main_drawer2"/>
 
     </LinearLayout>
-
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
@@ -44,19 +43,5 @@
         android:background="@color/white">
 
     </com.google.android.material.navigation.NavigationView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/layoutlinear"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:padding="5dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/recycleview_ticket_item"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:scrollbars="vertical"
-        android:background="@color/white">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
