--- a/MyApplication/app/src/main/res/layout/activity_dashboard.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dashboard.xml
@@ -2,12 +2,12 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_spercamerge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardActivity"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    android:id="@+id/drawer_spercamerge">
+    tools:context=".DashboardActivity"
+    tools:openDrawer="start">
 
     <LinearLayout
         android:id="@+id/layoutlinear"
@@ -16,31 +16,45 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:id="@+id/toolbar"
             android:background="@color/lavander"
+
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.appcompat.widget.Toolbar>
+
 
         <FrameLayout
+            android:id="@+id/fragment_container_main_drawer2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment_container_main_drawer2"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/nav_view"
         android:layout_gravity="start"
+        android:background="@color/white"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"
         app:itemIconTint="#8692F2"
         app:itemTextColor="#8692F2"
-        android:background="@color/white">
+        app:menu="@menu/nav_menu">
+
 
     </com.google.android.material.navigation.NavigationView>
 
