--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavander">#8692F2</color>
+    <color name="lavander2">#FFF4F2</color>
 </resources>
