--- a/MyApplication/app/src/main/res/layout/custom_dialog.xml
+++ b/MyApplication/app/src/main/res/layout/custom_dialog.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/transparent">
+    android:background="@drawable/alert_dialog_round"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/custom_dialog_background"
-        android:orientation="vertical">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_alert_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/lavander2"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:paddingTop="10dp"
+            android:id="@+id/image_logo_alert_dialog"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/ticket"
+            />
+
         <TextView
-            android:id="@+id/dialog_message"
+            android:id="@+id/tv_name_company_alert_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Numar insuficient de bilete"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/ok_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:background="@drawable/custom_button_background"
-            android:text="OK"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:lines="3"
+            android:maxLines="1"
+            android:textAlignment="center"
+            android:textColor="@color/lavander"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_logo_alert_dialog"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Ne pare rau de incovinient dar ati atins numarl maxim de bilete disponibile" />
 
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
