--- a/MyApplication/app/src/main/res/layout/fragment_log_in.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_log_in.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.RegisterFragment"
-    android:padding="20dp">
+    tools:context=".fragments.LogInFragment"
+    android:padding="30dp"
+    android:layout_marginTop="100dp">
 
     <TextView
         android:id="@+id/textViewUsername"
@@ -51,15 +52,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />
 
     <Button
+        android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/registerFragment"
         android:layout_marginTop="24dp"
-        android:text="Register"
+        android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword">
-
-    </Button>
+        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
