--- a/MyApplication/app/src/main/res/layout/fragment_welcome.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_welcome.xml
@@ -10,7 +10,7 @@
         android:id="@+id/bt_to_login_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="sign up"
+        android:text="Login"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
