--- a/MyApplication/app/src/main/res/layout/nav_header.xml
+++ b/MyApplication/app/src/main/res/layout/nav_header.xml
@@ -15,6 +15,7 @@
     </ImageView>
 
     <TextView
+        android:id="@+id/nav_header_profilname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profil name"
@@ -23,6 +24,7 @@
     </TextView>
 
     <TextView
+        android:id="@+id/nav_header_profilemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="irina@gmail.com"
