--- a/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
@@ -24,6 +24,8 @@
         android:padding="@dimen/margin"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:foregroundGravity="center"
+        android:gravity="center"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_details_ticket"
