--- a/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
@@ -10,11 +10,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_ticket_item"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/lavander"
+        android:background="@color/purple"
         android:padding="10dp"
         app:layout_marginBaseline="@dimen/margin">
 
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
+            android:maxLines="2"
             android:layout_marginTop="15dp"
             android:padding="5dp"
             android:textColor="@color/white"
@@ -50,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginTop="5dp"
-
+            android:paddingVertical="@dimen/margin"
             android:src="@drawable/baseline_location_on_24_white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_ticket_payment"/>
@@ -60,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
+            android:paddingVertical="@dimen/margin"
             android:layout_marginLeft="@dimen/margin"
             app:layout_constraintLeft_toRightOf="@+id/image_location"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_ticket_payment"
@@ -73,6 +76,8 @@
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="@dimen/margin"
+            android:paddingBottom="@dimen/margin"
+            android:paddingVertical="@dimen/margin"
             android:src="@drawable/baseline_date_range_24_white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_location"/>
@@ -87,9 +92,14 @@
             android:layout_marginTop="9dp"
             app:layout_constraintLeft_toRightOf="@+id/image_date"
             app:layout_constraintTop_toBottomOf="@+id/tv_location_ticket_payment"
+            app:layout_constraintBottom_toTopOf="@+id/linie2"
+            android:padding="@dimen/margin"
+            android:paddingVertical="@dimen/margin"
+            android:paddingBottom="@dimen/margin"
             tools:text="shshfjdsfhjhsdghjfd"/>
 
         <TextView
+            android:id="@+id/linie2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="1dp"
