--- a/MyApplication/app/src/main/res/layout/ticket_item.xml
+++ b/MyApplication/app/src/main/res/layout/ticket_item.xml
@@ -5,11 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_ticket"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
     android:layout_marginTop="@dimen/margin"
     android:layout_marginEnd="15dp"
     android:layout_marginBottom="@dimen/margin"
+    android:padding="10dp"
     android:background="@drawable/card_round"
     android:elevation="@dimen/margin">
 
@@ -26,10 +27,11 @@
 
     <TextView
         android:id="@+id/tv_name_ticket"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin"
-        android:layout_marginTop="15dp"
+       android:maxLines="2"
+        android:layout_marginTop="10dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
