--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lavander">#8692F2</color>
     <color name="lavander2">#FFF4F2</color>
+    <color name="purple">#9586c0</color>
 </resources>
