--- a/MyApplication/app/src/main/res/layout/fragment_admin_calendar.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_admin_calendar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.CalendarFragment">
+    tools:context=".fragments.admin.AdminCalendarFragment">
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleview_ticket_item_fragment_calendar"
+        android:id="@+id/recycleview_ticket_item_fragment_calendar_admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/calendarView"
