--- a/MyApplication/app/src/main/res/layout/fragment_log_in.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_log_in.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.LogInFragment"
-    android:background="@drawable/pagebkg">
+    android:background="@drawable/background_ticket">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailLayout"
