--- a/MyApplication/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/MyApplication/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_spercamerge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".DashboardActivity"
-    tools:openDrawer="start">
+    android:id="@+id/drawer_spercamerge2"
+    tools:context=".AdminDashboardActivity">
 
     <LinearLayout
         android:id="@+id/layoutlinear"
@@ -43,9 +41,6 @@
 
                 </TextView>
 
-
-
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -53,14 +48,14 @@
 
 
         <FrameLayout
-            android:id="@+id/fragment_container_main_drawer2"
+            android:id="@+id/fragment_container_main_drawer3"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_view_admin"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -68,7 +63,7 @@
         app:headerLayout="@layout/nav_header"
         app:itemIconTint="#8692F2"
         app:itemTextColor="#8692F2"
-        app:menu="@menu/nav_menu">
+        app:menu="@menu/nav_menu_admin">
 
 
     </com.google.android.material.navigation.NavigationView>
