add logic add ticket to firebase

--- a/MyApplication/app/src/main/res/layout/activity_test.xml
+++ b/MyApplication/app/src/main/res/layout/activity_test.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.admin.AdminAddTicketFragment">
+    tools:context=".TestActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -210,4 +210,5 @@
             app:layout_constraintTop_toBottomOf="@id/idEdtImageUrl" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
